src/objects/Euro_Team__c.object
<CustomObject>
    <description>This object stores the teams competing at the Euros</description>
    <fields>
        <fullName>Dummy_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a place hold for the teams</inlineHelpText>
        <label>Dummy Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Euro_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Euro Group</label>
        <referenceTo>Euro_Group__c</referenceTo>
        <relationshipLabel>Euro Teams</relationshipLabel>
        <relationshipName>Euro_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Drawn__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Group Drawn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Goal_Difference__c</fullName>
        <formula>Group_Goals_For__c -  Group_Goals_Against__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Goal Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Goals_Against__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Group Goals Against</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Goals_For__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Group Goals For</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Lost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Group Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Played__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Group Played</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Points__c</fullName>
        <formula>(Group_Won__c * 3) + (Group_Drawn__c * 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Won__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Group Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odds_Simple__c</fullName>
        <label>Odds Simple</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odds__c</fullName>
        <label>Odds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegistrationChatterPostSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RegistrationChatterPostSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the person that selected the team</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Euro_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Euro Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Euro_Group__c</columns>
        <columns>Odds__c</columns>
        <columns>Odds_Simple__c</columns>
        <columns>User__c</columns>
        <columns>Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dummy_Team__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Euro Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Euro Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>